Removed closed beta session label

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
         <h1>Masters Of Java 2020 Closed Beta Sessions</h1>
     </div>
     <div class="row">
-        <p class="para">Welcome to the Masters of Java 2020 Closed Beta Session. Have a look at the intro movie below to get an idea
+        <p class="para">Welcome to the Masters of Java 2020. Have a look at the intro movie below to get an idea
             on what to expect. When you are ready to join the game click the Play Now button.</p>
     </div>
     <div class="row">
