Removed more closed beta labels

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Masters of Java - Startpage</title>
+    <title>Masters of Java</title>
     <link rel="stylesheet" th:href="@{/public/css/index.css}"/>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <img class="logo" th:src="@{/public/images/moj_logo.png}"/>
     </div>
     <div class="row">
-        <h1>Masters Of Java 2020 Closed Beta Sessions</h1>
+        <h1>Masters Of Java 2020</h1>
     </div>
     <div class="row">
         <p class="para">Welcome to the Masters of Java 2020. Have a look at the intro movie below to get an idea
