Updated Javadoc URL

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -139,7 +139,7 @@
 
             <div th:if="${running}" class="p-2 text-center">
                 <a class="btn w-50 btn-warning text-white"
-                   th:href="@{/javadoc/api/index.html(overview-tree.html)}"
+                   th:href="@{/javadoc/api/index.html}"
                    target="_blank">Javadoc</a>
             </div>
             <div th:if="${running}" class="p-2 text-center">
