Fixed howler to load from webjar in stead of web cdn

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -290,7 +290,7 @@
     assignmentName='[[${assignmentName}]]';
 </script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.js"></script>
+<script type="text/javascript" th:src="@{/webjars/howler/howler.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
