--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -22,41 +22,37 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
+<!--/*@thymesVar id="assignment" type="nl.moj.server.GameController.TeamAssignmentModel"*/-->
 <body class="m-2">
 <div class="container-fluid">
     <!-- content -->
     <div class="row">
         <div class="col-9">
-            <!--/*@thymesVar id="running" type="java.lang.Boolean"*/-->
-            <div class="text-center mt-5" th:unless="${running}">
+            <div class="text-center mt-5" th:unless="${assignmentActive}">
                 <h1>No active assignment</h1>
                 <p>At the moment there is no assignment active. Once an assignment is started you will automatically be
                     shown the assignment. (If not press F5 to reload the page.)</p>
             </div>
 
-            <!--/*@thymesVar id="finished" type="java.lang.Boolean"*/-->
-
-
-            <div id="content" th:if="${running}" th:attr="finished=${finished},submittime=${submittime}">
+            <div id="content" th:if="${assignmentActive}" th:attr="finished=${assignment.isCompleted()},submittime=${assignment.getSubmitTime()}">
                 <div class="p-2">
-                    <h3>Assignment: [[${assignment}]] <span th:if="${(solution)}"> (with provided solution)</span> </h3>
+                    <h3>Assignment: [[${assignmentName}]]</h3>
                 </div>
                 <div id="alert-container">
-                    <div th:if="${finished and (finalscore &gt; 0)}" class="alert alert-success p-4" role="alert">
+                    <div th:if="${assignment.isCompleted() and (assignment.getScore() &gt; 0)}" class="alert alert-success p-4" role="alert">
                         <h4 class="alert-heading">Assignment Submitted</h4>
                         <p>Well done!. You have submitted the assignment for final review. Chill out and wait until the
                             next assignment starts.</p>
                     </div>
-                    <div th:if="${finished and finalscore == 0}" class="alert alert-danger p-4" role="alert">
+                    <div th:if="${assignment.isCompleted() and assignment.getScore() == 0}" class="alert alert-danger p-4" role="alert">
                         <h4 class="alert-heading">Assignment Tests Failed :-(</h4>
                         <p>Your score is 0. Chill out and wait until the next assignment starts. Better luck next
                             time!</p>
                     </div>
                 </div>
-                <div th:unless="${finished}" id="tabs">
+                <div th:unless="${assignment.isCompleted()}" id="tabs">
                     <ul class="nav nav-tabs" role="tablist">
-                        <!--/*@thymesVar id="files" type="java.util.List<nl.moj.server.files.AssignmentFile>"*/-->
-                        <li class="nav-item" th:each="file,status : ${files}">
+                        <li class="nav-item" th:each="file,status : ${assignment.getFiles()}">
                             <a class="nav-link"
                                th:classappend="${(status.index==0?'active':'') + (file.readOnly?'':' editable')}"
                                th:id="${'cm-'+file.uuid}"
@@ -84,7 +80,7 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
-                             th:each="file,status : ${files}" th:id="${'tab-'+file.uuid}">
+                             th:each="file,status : ${assignment.getFiles()}" th:id="${'tab-'+file.uuid}">
                             <div class="tab-pane-content">
                                 <div class="content" th:switch="${file.getMediaTypeString()}" th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).TASK}">
                                     <div class="markdown markdown-body" th:case="'text/x-web-markdown'" th:utext="${file.getContentAsString()}"></div>
@@ -117,12 +113,12 @@
                 <br/>
                 <br/>
             </div>
-            <div th:if="${running}" class="p-2 align-self-center">
+            <div th:if="${assignmentActive}" class="p-2 align-self-center">
                 <div class="text-center">
                     <h3>Time Left</h3>
                 </div>
                 <div id="assignment-clock"
-                     th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
+                     th:attrappend="data-time-left=${assignment.getTimeRemaining().toSeconds()},data-time=${assignment.getTime()},running=${assignmentActive}"
                      class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
                         <h2 class="align-self-center">--:--</h2>
@@ -136,23 +132,22 @@
                     </svg>
                 </div>
             </div>
-
-            <div th:if="${running}" class="p-2 text-center">
+            <div th:if="${assignmentActive}" class="p-2 text-center">
                 <a class="btn w-50 btn-warning text-white"
                    th:href="@{/javadoc/api/index.html}"
                    target="_blank">Javadoc</a>
             </div>
-            <div th:if="${running}" class="p-2 text-center">
-                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
+            <div th:if="${assignmentActive}" class="p-2 text-center">
+                <button id="compile" class="btn w-50 btn-success" th:disabled="${assignment.isCompleted()}">Compile</button>
             </div>
-            <div th:if="${running}" class="p-2  text-center">
+            <div th:if="${assignmentActive}" class="p-2  text-center">
                 <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal"
-                        onclick="resetTabColor();" th:disabled="${finished}">Test
+                        onclick="resetTabColor();" th:disabled="${assignment.isCompleted()}">Test
                 </button>
             </div>
-            <div th:if="${running}" class="mt-5 p-2 text-center">
+            <div th:if="${assignmentActive}" class="mt-5 p-2 text-center">
                 <button id="btn-open-submit" class="btn w-50 btn-danger" data-toggle="modal"
-                        data-target="#confirm-submit-modal" th:disabled="${submitDisabled}">SUBMIT
+                        data-target="#confirm-submit-modal" th:disabled="${assignment.isCompleted()}">SUBMIT
                 </button>
             </div>
 
@@ -163,36 +158,18 @@
         <div class="mr-auto p-2">
             <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
                  src="/static/images/logo_first8_150x39.png"/>
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
+            <div th:if="${assignmentActive}" class="p-2 text-center inlineBlock minWidth100">
                 <a class="btn btn-info text-white"
                    th:href="@{/feedback}"
                    target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
             </div>
-            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
+            <div th:if="${assignmentActive}" class="p-2 text-center inlineBlock minWidth100">
                 <a class="btn btn-info text-white"
                    th:href="@{/rankings}"
                    target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
             </div>
-            <div class="p-2  inlineBlock minWidth100 " th:if="${sessions!=null && sessions.size()>=1}">
-                <form class="form" method="post" th:action="@{/index/select-session}" th:object="${selectSessionForm}">
-                    <div >
-                        <select class="form-control inlineBlock maxWidth300 font10px" th:classappend="${sessions.size()==1?'hide':''}"
-                                id="sessions"  onchange="if (this.value) $(this).closest('form').submit()" th:field="*{session}" th:title="*{session}">
-                            <option value="">Speelbare competities: </option>
-                            <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${'Session '+(sStat.index +1)+ ' (' + s.getCompetition().getShortName()+ ')'}">
-                            </option>
-                        </select>
-                    </div>
-                </form>
-            </div>
-
-
         </div>
         <div class="mr-auto p-2">&nbsp;
-
         </div>
         <div class="ml-auto pr-2 align-self-center" id="status"></div>
         <div class="pr-2 align-self-center">
@@ -201,9 +178,7 @@
     </div>
 </div>
 
-
-<!-- Modal Tests -->
-<div class="modal fade" id="test-modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div th:if="${assignmentActive}" class="modal fade" id="test-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -215,7 +190,7 @@
             <div class="modal-body">
                 <p>Please select the tests you want to run.</p>
                 <form>
-                    <div class="form-check" th:each="test : ${tests}">
+                    <div class="form-check" th:each="test : ${assignment.getTests()}">
                         <label class="form-check-label">
                             <input name="test" class="form-check-input" type="checkbox" th:value="${test.uuid}"
                                    checked="true">
@@ -223,48 +198,17 @@
                         </label>
                     </div>
                 </form>
-                <i><span th:if="${labels!=null && labels.size()>0}">. Points for each individual test: [[${labels.toString().replace("_","=")}]]</span></i>
+<!--                <i><span th:if="${labels!=null && labels.size()>0}">. Points for each individual test: [[${labels.toString().replace("_","=")}]]</span></i>-->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished}">Run Tests</button>
+                <button type="button" id="test" class="btn btn-primary" th:disabled="${assignment.isCompleted()}">Run Tests</button>
             </div>
         </div>
     </div>
 </div>
-<!-- Modal Tests -->
-<div class="modal fade" id="editTeam-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="contactDetailsLabel">Update name or contact details</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Update your team name.</p>
-                <p contenteditable="true" class="paddingLeft50">[[${team}]]</p>
-                <p>Update your contact details.</p>
-                <form class="paddingLeft50">
-                    <div class="form-check" th:each="test : ${tests}">
-                        <label class="form-check-label">
-                            <input name="test" class="form-check-input" type="checkbox" th:value="${test.uuid}"
-                                   checked="true">
-                            [[${test.shortName}]]
-                        </label>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="saveContactDetails" class="btn btn-primary" data-dismiss="modal">Save</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal confirm submit -->
-<div class="modal fade" id="confirm-submit-modal" tabindex="-1" role="dialog" aria-hidden="true">
+
+<div th:if="${assignmentActive}" class="modal fade" id="confirm-submit-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -274,19 +218,22 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>This will submit your code. If you reach the maximum allowed submits of [[${maxSubmits}]] you will no
+                <p>This will submit your code. If you reach the maximum allowed submits of [[${assignment.getMaximumSubmits()}]] you will no
                     longer be able
-                    to change your code. You have <span id="submits" th:text="${submits}"></span> left.</p>
+                    to change your code. You have <span id="submits" th:text="${assignment.getRemainingSubmits()}"></span> left.</p>
                 <p>Do you want to continue?</p>
             </div>
             <div class="modal-footer">
                 <button type="cancel-submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="submit" class="btn w-50 btn-danger" th:disabled="${submitDisabled}">SUBMIT</button>
+                <button id="submit" class="btn w-50 btn-danger" th:disabled="${assignment.isCompleted()}">SUBMIT</button>
             </div>
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
+    session='[[${sessionId}]]'
+    assignment='[[${assignmentId}]]';
     assignmentName='[[${assignmentName}]]';
 </script>
 
