--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -131,7 +131,9 @@
                                 <td><i class="fa fa-chevron-down"></i></td>
                                 <td th:text="${comp.getName()}"></td>
                                 <td th:text="${comp.getAssignments().size()}"></td>
-                                <td></td>
+                                <td>
+                                    <button type="button" th:onclick="${'startSession(\''+comp.getUuid()+'\')'}">Start</button>
+                                </td>
                             </tr>
                             <tr class="collapse accordion-collapse" th:id="${'r'+status.index}" data-bs-parent=".table">
                                 <td colspan="3">
@@ -185,7 +187,7 @@
                                 <td th:text="${assignment.getDuration()}"/>
                                 <td th:text="${assignment.getSubmits()}"/>
                                 <td th:text="${assignment.getCollection()}"/>
-                                <td><input class="form-check-input assignment-cb" type="checkbox" name="assignment" th:value="${assignment.getUuid()}"></td>
+                                <td><input class="form-check-input assignment-cb" type="checkbox" name="assignment" th:value="${assignment.getUuid()}" /></td>
                             </tr>
                             </tbody>
                         </table>
